--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,3 @@
 [flake8]
 # Migrations are auto-generated (mostly); let's not worry about them.
-exclude = djautotask/tests/fixtures.py,djautotask/migrations/,build,djautotask/tests/mommy_recipes.py
+exclude = djautotask/tests/fixtures.py,djautotask/migrations/,build,djautotask/tests/mommy_recipes.py,.eggs/
