--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,6 +22,9 @@ jobs:
         python-version: '3.8'
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
+        pip install --upgrade -r requirements.txt
+        pip install --upgrade -r requirements_test.txt
         python setup.py install
 #        pip install build
 #    - name: Build package
