--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,6 +17,7 @@ permissions:
 
 jobs:
   if_merged:
+    if: github.event.pull_request.merged == true
     deploy:
       runs-on: ubuntu-latest
       steps:
