--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -7,32 +7,37 @@
 # documentation.
 
 name: Upload Python Package
-on: [push]
+on:
+  pull_request:
+    types:
+      - closed
 permissions:
   contents: read
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.8'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install --upgrade -r requirements.txt
-        pip install --upgrade -r requirements_test.txt
-        python setup.py install
-    - name: Run tests
-      run: |
-        flake8 .
-        python setup.py test
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
-        repository_url: https://test.pypi.org/legacy/
+    if_merged:
+      if: github.event.pull_request.merged == true
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v3
+        - name: Set up Python
+          uses: actions/setup-python@v3
+          with:
+            python-version: '3.8'
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            pip install --upgrade -r requirements.txt
+            pip install --upgrade -r requirements_test.txt
+            python setup.py install
+        - name: Run tests
+          run: |
+            flake8 .
+            python setup.py test
+        - name: Publish package
+          uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
+          with:
+            user: __token__
+            password: ${{ secrets.PYPI_API_TOKEN }}
+            repository_url: https://test.pypi.org/legacy/
