--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Run tests
         run: |
           flake8 .
-          python setup.py test
+          python runtests.py
       - name: Create source distribution
         run: |
-          python setup.py sdist
+          python3 -m build
       - name: Publish package
         uses: pypa/gh-action-pypi-publish@81e9d935c883d0b210363ab89cf05f3894778450
         with:
